# CRMSync

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  ENVIRONMENT.md  LICENSE  README.md  config.cfg  environment.yml  makefile  mkdocs.yml  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
crmsync/: __init__.py  __main__.py
crmsync/api/: __init__.py  account_mapping.json  client.py  contacts_mapping.json
crmsync/api/ERPNextClient/: __init__.py
crmsync/api/WSClient/: __init__.py
crmsync/api/models/: account.py  contact.py  policy.py  product.py
crmsync/config/: __init__.py  config.py  logging.py
crmsync/config/mapping/: address.json  bank_account.json  contact.json  customer.json  handler.json  item.json  salesorder.json
crmsync/database/: base.py  engine.py  unit_of_work.py
crmsync/database/models/: vtigercrm_contactcf.py  vtigercrm_contactdetails.py  vtigercrm_crmentity.py  vtigercrm_salesorder.py  vtigercrm_salesordercf.py  vtigercrm_ticketcf.py  vtigercrm_troubletickets.py
crmsync/database/services/: query.py
crmsync/models/: mapping_salesordercf.json  vtigercrm_contactdetails.py  vtigercrm_crmentity.py  vtigercrm_salesordercf.py
crmsync/syncer/: entry_parser.py  entry_parser_doc.py  entry_parser_doc_simple.py  entry_parser_issue.py  policy_assembler.py  syncer.py
crmsync/syncer/assembler/: policy.py  policy_assembler.py
crmsync/syncer/assembler/core/: pipeline.py  step.py
crmsync/syncer/assembler/factories/: address.py  bank_account.py  base.py  contact.py  customer.py  item.py  salesorder.py
crmsync/syncer/assembler/handlers/: address.py  bank_account.py  base.py  contact.py  customer.py  item.py  salesorder.py
crmsync/syncer/assembler/linkers/: address.py  base.py  contact.py  document.py
crmsync/syncer/assembler/resolvers/: simple_name.py
crmsync/syncer/dataset/: data.txt  dataset.json
crmsync/syncer/handler/: address.py  bank_account.py  base.py  contact.py  customer.py  issue.py  item.py  salesorder.py  task.py
crmsync/syncer/utils/: comparator.py  entry_parser_doc.py  entry_parser_doc_simple.py  entry_parser_issue.py
docs/: api.md  installation.md  usage.md
docs/crmsync/database/: base.md  engine.md  unit_of_work.md
docs/crmsync/database/models/: vtigercrm_contactcf.md  vtigercrm_contactdetails.md  vtigercrm_crmentity.md  vtigercrm_salesorder.md  vtigercrm_salesordercf.md  vtigercrm_ticketcf.md  vtigercrm_troubletickets.md
docs/crmsync/database/services/: query.md
docs/crmsync/syncer/: syncer.md
docs/crmsync/syncer/assembler/: policy_assembler.md
docs/crmsync/syncer/assembler/core/: pipeline.md  step.md
docs/crmsync/syncer/assembler/factories/: address.md  bank_account.md  base.md  contact.md  customer.md  item.md  salesorder.md
docs/crmsync/syncer/assembler/handlers/: address.md  bank_account.md  base.md  contact.md  customer.md  item.md  salesorder.md
docs/crmsync/syncer/assembler/linkers/: address.md  base.md  contact.md  document.md
docs/crmsync/syncer/assembler/resolvers/: simple_name.md
docs/crmsync/syncer/utils/: comparator.md  entry_parser_doc.md  entry_parser_doc_simple.md  entry_parser_issue.md
scripts/: gen-docs.sh
tests/: __init__.py  test_crmsync.py
